mshup04のタイトル表示変更

--- a/mashup04all+station.html
+++ b/mashup04all+station.html
@@ -133,7 +133,7 @@
     <div class="container">
       <div class="navbar-brand">
         <strong>
-      		Mash-up Sample (Forecast and Sunrise/Sunset)<br />マッシュアップの例 (天気予報と日の出/入)
+      		Mash-up Sample (Forecast, Sunrise/Sunset and Nearest station)<br />マッシュアップの例 (天気予報，日の出/入，最寄り駅)
         </strong>
       </div>
     </div>
@@ -150,8 +150,8 @@ and change WebAPI site from "www.drk7.jp" to "www.jma.go.jp". <br />
 <span style="color:red">2021-05-27: </span>
 There was a change with "www.drk7.jp" and latitude and longitude could not be obtained. 
 Not good, but it is written directly in the code.<br />
-<strong>外部サーバから直接データを受け取って、熊本県の天気予報と日の出日の入りの時刻を表示します。
-実際には、以下の２つのサーバのRESTサービス(Web API)を利用しています。</strong><br />
+<strong>外部サーバから直接データを受け取って、熊本県の天気予報と日の出日の入りの時刻，その地点の最寄り駅を表示します。
+実際には、３つのサーバのRESTサービス(Web API)を利用しています。</strong><br />
 <span style="color:red">2022-05-25: </span>
 JSONPの利用停止。jQuery,jQueryMobileの代わりにbootstrao使用。WebAPIを「www.drk7.jp」から「www.jma.go.jp」に変更。<br />
 <span style="color:red">2021-05-27: </span>
