--- a/index.html
+++ b/index.html
@@ -133,18 +133,19 @@
 			<div class="container">
 				<div class="navbar-brand">
 					<strong>
-						Mash-up Sample (Forecast and Sunrise/Sunset)<br />マッシュアップの例 (天気予報と日の出/入)
+					Mash-up Sample (Forecast, Sunrise/Sunset, Nearest Station)<br />マッシュアップの例 (天気予報と日の出日の入り、最寄り駅)
 					</strong>
 				</div>
 			</div>
 		</div>
+		<!--
 	</header>
-	<blockquote class="text-end">
-		2022-05-25 (since 2014-01-25), by <a href="mailto:nakano@cc.kumamoto-u.ac.jp?subject=mashup20220525">nakano@cc.kumamoto-u.ac.jp</a>
-	</blockquote>
+	
+	
 	<strong>
 		This sample receives data from different two external servers and shows forecast and sunrise/sunset time
-		of Kumamoto region, using the following two RESTful services (Web API).
+		of Kumamoto region, using the following two RESTful services (Web API).-->
+		<!--
 	</strong><br />
 	<span style="color:red">2022-05-25: </span>
 	Stop to use JSONP and start to use bootstrap instead of jQuery and jQueryMobile,
@@ -152,20 +153,24 @@
 	<span style="color:red">2021-05-27: </span>
 	There was a change with "www.drk7.jp" and latitude and longitude could not be obtained.
 	Not good, but it is written directly in the code.<br />
+	-->
 	<strong>
-		外部サーバから直接データを受け取って、熊本県の天気予報と日の出日の入りの時刻を表示します。
-		実際には、以下の２つのサーバのRESTサービス(Web API)を利用しています。
+	<br />
+		外部サーバから直接データを受け取って、熊本県の天気予報と日の出日の入りの時刻、選択地点の最寄り駅を表示します。3つのサーバのWeb APIを利用しています。
+		<br />
 	</strong><br />
+	<!--
 	<span style="color:red">2022-05-25: </span>
 	JSONPの利用停止。jQuery,jQueryMobileの代わりにbootstrao使用。WebAPIを「www.drk7.jp」から「www.jma.go.jp」に変更。<br />
 	<span style="color:red">2021-05-27: </span>
 	「www.drk7.jp」が変更になり、緯度経度が取得できなくなったため、良くないが直接コーディングしている。
+	
 
 	<ul>
 		<li><a target="_blank" href="https://mindtech.jp/?p=1754">JSON data from the new JMA / 新しい気象庁サイトからJSONデータが取得できる件</a></li>
 		<li><a target="_blank" href=" https://sunrise-sunset.org/api">Sunrize Sunset Calculation / 日の出日の入り計算</a></li>
 	</ul>
-
+	-->
 	<div class="form-floating">
 		<select class="form-select" aria-label="select a region" id="itemSelector"></select>
 		<label for="floatingSelect">Region (地域):</label>
