タイトル変更

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 				});
 		}
 	</script>
-	<title>mash-up sample (forecast and sunrisre/sunset)</title>
+	<title>mash-up sample (forecast, sunrisre/sunset, nearest station)</title>
 	<style type="text/css">
 		.prettyprint ol.linenums > li {
 			list-style-type: decimal;
