ヘッダーの説明を省略

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			<div class="container">
 				<div class="navbar-brand">
 					<strong>
-					Mash-up Sample (Forecast, Sunrise/Sunset, Nearest Station)<br />マッシュアップの例 (天気予報と日の出日の入り、最寄り駅)
+					マッシュアップのサンプル
 					</strong>
 				</div>
 			</div>
@@ -155,7 +155,7 @@
 	-->
 	<strong>
 	<br />
-		外部サーバから直接データを受け取って、熊本県の天気予報と日の出日の入りの時刻、選択地点の最寄り駅を表示します。3つのサーバのWeb APIを利用しています。
+		外部サーバから直接データを受け取って，熊本県の天気予報と日の出/日の入り時刻，選択地点の最寄り駅を表示します．3つのサーバのWeb APIを利用しています．
 		<br />
 	</strong><br />
 	<!--
