ヘッダーを左寄せに変更

--- a/index.html
+++ b/index.html
@@ -128,15 +128,12 @@
 </head>
 <body>
 	<header>
-		<div class="navbar navbar-dark bg-dark shadow-sm">
-			<div class="container">
-				<div class="navbar-brand">
-					<strong>
-					マッシュアップのサンプル
-					</strong>
-				</div>
-			</div>
+
+		<div class="navbar sticky-top navbar-dark bg-dark">
+		<div class="container-fluid">
+			<div class="navbar-brand">Mashup example</br>マッシュアップの例</div>
 		</div>
+	</div>
 		<!--
 	</header>
 	
