--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 		<div class="navbar sticky-top navbar-dark bg-dark">
 		<div class="container-fluid">
-			<div class="navbar-brand">Mashup example</br>マッシュアップの例</div>
+			<div class="navbar-brand">Mashup example<br />マッシュアップの例</div>
 		</div>
 	</div>
 		<!--
