説明文を変更

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 	-->
 	<strong>
 	<br />
-		外部サーバから直接データを受け取って，熊本県の天気予報と日の出/日の入り時刻，選択地点の最寄り駅を表示します．3つのサーバのWeb APIを利用しています．
+		外部サーバから直接データを受け取って，熊本県の天気予報と日の出/日の入り時刻，観測地点の最寄り駅を表示します．3つのサーバのWeb APIを利用しています．
 		<br />
 	</strong><br />
 	<!--
