ページタイトルを変更

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 				});
 		}
 	</script>
-	<title>mash-up sample (forecast, sunrisre/sunset, nearest station)</title>
+	<title>Weather forcast for Kumamoto</title>
 	<style type="text/css">
 		.prettyprint ol.linenums > li {
 			list-style-type: decimal;
